--- a/srn/client/src/HtmlLayers/OverheadPanel.scss
+++ b/srn/client/src/HtmlLayers/OverheadPanel.scss
@@ -4,23 +4,25 @@
   display: flex;
   justify-content: center;
 }
+
 .overhead-panel {
   padding: 0;
 }
 
 .overhead-panel-content {
   color: white;
-  padding: 0;
-  height: 80%;
   position: relative;
+  padding: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   .time {
-    margin-top: -5px;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     display: flex;
-    width: 100%;
-    height: 100%;
+    width: calc(100% - 4px);
+    height: calc(100% - 4px);
     font-size: 40px;
     line-height: 40px;
   }
